2026-02-15T13:03:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/22036138397 # 1444
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-15
* notice: last 14d: unq all: 89 642
* notice: prev accum: outdated-unq outdated-all / unq all: 5296 10593 / 5393 11167
* notice: next accum: outdated-unq outdated-all / unq all: 5296 10593 / 5400 11235
* notice: prev exec diff / last date diff / accum: unq all: +7 +68 -0 -0 / +7 +68 -0 -0 / 7 68
* notice: removed / changed dates: [2026-01-31] / [2026-02-14]

2026-02-14T13:00:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/22017846595 # 1442
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-14
* notice: last 14d: unq all: 83 574
* notice: prev accum: outdated-unq outdated-all / unq all: 5295 10592 / 5386 11099
* notice: next accum: outdated-unq outdated-all / unq all: 5296 10593 / 5393 11167
* notice: prev exec diff / last date diff / accum: unq all: +7 +68 -0 -0 / +7 +68 -0 -0 / 7 68
* notice: removed / changed dates: [2026-01-30] / [2026-02-13]

2026-02-13T13:12:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21988113087 # 1440
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-13
* notice: last 14d: unq all: 79 507
* notice: prev accum: outdated-unq outdated-all / unq all: 5295 10592 / 5381 11067
* notice: next accum: outdated-unq outdated-all / unq all: 5295 10592 / 5386 11099
* notice: prev exec diff / last date diff / accum: unq all: +5 +32 -0 -0 / +5 +32 -0 -0 / 5 32
* notice: removed / changed dates: [2026-01-29] / [2026-02-12]

2026-02-12T13:21:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21948294351 # 1438