@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2026-02-15T13:03:02Z",
+  "timestamp" : "2026-02-16T13:16:26Z",
   "count_outdated" : 10593,
   "uniques_outdated" : 5296,
-  "count" : 11235,
-  "uniques" : 5400,
+  "count" : 11239,
+  "uniques" : 5404,
   "clones" : [
-    {
-      "timestamp": "2026-02-01T00:00:00Z",
-      "count": 0,
-      "count_minmax": [ 0, 0 ],
-      "count_decinc": [ 0, 0 ],
-      "uniques": 0,
-      "uniques_minmax": [ 0, 0 ],
-      "uniques_decinc": [ 0, 0 ]
-    },
     {
       "timestamp": "2026-02-02T00:00:00Z",
       "count": 0,
@@ -130,6 +121,15 @@
       "uniques": 7,
       "uniques_minmax": [ 7, 7 ],
       "uniques_decinc": [ 0, 7 ]
+    },
+    {
+      "timestamp": "2026-02-15T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 4,
+      "uniques_minmax": [ 4, 4 ],
+      "uniques_decinc": [ 0, 4 ]
     }
   ]
 }
