@@ -1,12 +1,7 @@
 {
-  "count": 642,
-  "uniques": 89,
+  "count": 646,
+  "uniques": 92,
   "clones": [
-    {
-      "timestamp": "2026-02-01T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
     {
       "timestamp": "2026-02-02T00:00:00Z",
       "count": 0,
@@ -71,6 +66,11 @@
       "timestamp": "2026-02-14T00:00:00Z",
       "count": 68,
       "uniques": 7
+    },
+    {
+      "timestamp": "2026-02-15T00:00:00Z",
+      "count": 4,
+      "uniques": 4
     }
   ]
 }
